# LSPlant

./: README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: maven.yml
lsplant/: build.gradle.kts
lsplant/src/main/jni/: logging.hpp  lsplant.cc
test/src/main/jni/: CMakeLists.txt  elf_util.cpp  elf_util.h  test.cpp
